更新.gitignore以排除所有目录中的音频文件

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ dist-ssr
 *.sw?
 
 # Music files
-public/*.mp3
-public/*.flac
-public/*.wav
-public/*.ogg
-public/*.aac
-public/*.m4a
+**/*.mp3
+**/*.flac
+**/*.wav
+**/*.ogg
+**/*.aac
+**/*.m4a
